--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@sveltejs/vite-plugin-svelte": "1.0.1",
     "sass": "1.54.0",
     "svelte": "3.49.0",
-    "vite": "3.0.3"
+    "vite": "3.0.4"
   },
   "dependencies": {
     "@material/typography": "14.0.0",
+    "@smui/button": "6.0.0",
     "@smui/card": "6.0.0",
     "@smui/slider": "6.0.0",
     "@smui/textfield": "6.0.0",
