--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@smui/button": "6.0.0",
     "@smui/card": "6.0.0",
     "@smui/slider": "6.0.0",
+    "@smui/tab": "6.0.0",
+    "@smui/tab-bar": "6.0.0",
     "@smui/textfield": "6.0.0",
     "svelte-material-ui": "6.0.0"
   }
