--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deocalc",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,16 +12,18 @@
     "@sveltejs/vite-plugin-svelte": "1.0.1",
     "sass": "1.54.4",
     "svelte": "3.49.0",
-    "vite": "3.0.7"
+    "vite": "3.0.8"
   },
   "dependencies": {
     "@material/typography": "14.0.0",
+    "@smui-extra/autocomplete": "6.0.0",
     "@smui/button": "6.0.0",
     "@smui/card": "6.0.0",
-    "@smui/slider": "6.0.0",
     "@smui/tab": "6.0.0",
     "@smui/tab-bar": "6.0.0",
     "@smui/textfield": "6.0.0",
+    "date-fns": "2.29.1",
+    "praecox-datepicker": "1.1.7",
     "svelte-material-ui": "6.0.0"
   }
 }
