--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deocalc",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.1",
-    "sass": "1.54.4",
+    "@sveltejs/vite-plugin-svelte": "1.0.2",
+    "sass": "1.54.6",
     "svelte": "3.49.0",
-    "vite": "3.0.8"
+    "vite": "3.0.9"
   },
   "dependencies": {
     "@material/typography": "14.0.0",
-    "@smui-extra/autocomplete": "6.0.0",
-    "@smui/button": "6.0.0",
-    "@smui/card": "6.0.0",
-    "@smui/tab": "6.0.0",
-    "@smui/tab-bar": "6.0.0",
-    "@smui/textfield": "6.0.0",
-    "date-fns": "2.29.1",
+    "@smui-extra/autocomplete": "6.1.0",
+    "@smui/button": "6.1.0",
+    "@smui/card": "6.1.0",
+    "@smui/linear-progress": "6.1.0",
+    "@smui/tab": "6.1.0",
+    "@smui/tab-bar": "6.1.0",
+    "@smui/textfield": "6.1.0",
+    "date-fns": "2.29.2",
     "praecox-datepicker": "1.1.7",
-    "svelte-material-ui": "6.0.0"
+    "svelte-material-ui": "6.1.3"
   }
 }
